--- a/capstone/capstone/Base.lproj/Main.storyboard
+++ b/capstone/capstone/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jj6-vM-oTJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -154,7 +154,7 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="arrow.up.heart" catalog="system" title=""/>
                                                             <connections>
-                                                                <action selector="tapUpvote:" destination="CGi-x4-pXT" eventType="touchUpInside" id="pdd-Ov-Mhc"/>
+                                                                <action selector="tappedUpvote:forEvent:" destination="CGi-x4-pXT" eventType="touchUpInside" id="KT1-lb-p0f"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eD4-Ff-dL2">
@@ -162,7 +162,7 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="arrow.down.heart" catalog="system" title=""/>
                                                             <connections>
-                                                                <action selector="tapDownvote:" destination="CGi-x4-pXT" eventType="touchUpInside" id="Ntg-Zz-X73"/>
+                                                                <action selector="tappedDownvote:forEvent:" destination="CGi-x4-pXT" eventType="touchUpInside" id="PnJ-BO-yve"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EbR-ZC-V1L">
@@ -214,6 +214,7 @@
                                             <outlet property="productName" destination="wlo-8w-cTR" id="JTb-6d-VRE"/>
                                             <outlet property="productPrice" destination="I66-Ns-ygG" id="2Ai-Z2-BoS"/>
                                             <outlet property="upvote" destination="oIT-lb-llC" id="bfQ-7H-5JZ"/>
+                                            <segue destination="KY3-FX-TVy" kind="presentation" id="eWD-r3-g57"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -295,20 +296,81 @@
             </objects>
             <point key="canvasLocation" x="8640.579710144928" y="66.964285714285708"/>
         </scene>
-        <!--View Controller-->
+        <!--Product Details View Controller-->
         <scene sceneID="p1w-zc-FKz">
             <objects>
-                <viewController id="KY3-FX-TVy" sceneMemberID="viewController">
+                <viewController id="KY3-FX-TVy" customClass="ProductDetailsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LDg-df-Avw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="azk-A4-xEU">
+                                <rect key="frame" x="0.0" y="-8" width="414" height="861"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brand" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IxI-Si-uO6">
+                                        <rect key="frame" x="5" y="8" width="404" height="99"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Product Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4d-1A-ngW">
+                                        <rect key="frame" x="5" y="105" width="404" height="99"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMx-tJ-cpU">
+                                        <rect key="frame" x="150" y="408" width="127" height="58"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="INGREDIENTS:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="156-0g-5kL">
+                                        <rect key="frame" x="8" y="475" width="130" height="23"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lk0-nv-aWH">
+                                        <rect key="frame" x="8" y="501" width="398" height="297"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="newspaper" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UPm-Bg-06Z">
+                                        <rect key="frame" x="90" y="211" width="234" height="198"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="Cx4-HQ-Hhs"/>
+                                            <constraint firstAttribute="height" constant="125" id="RM9-Dk-3z5"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="UPm-Bg-06Z" firstAttribute="top" secondItem="I4d-1A-ngW" secondAttribute="bottom" constant="20" id="8ZL-b7-m3L"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="dDB-ef-ahE"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="0CG-Tu-oFP"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Bdr-QP-HyV"/>
                         <color key="backgroundColor" red="0.93882567309999998" green="0.97394164800000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
+                    <connections>
+                        <outlet property="Ingredients" destination="lk0-nv-aWH" id="erY-Wu-stI"/>
+                        <outlet property="productBrand" destination="IxI-Si-uO6" id="kwd-Va-LwK"/>
+                        <outlet property="productImage" destination="UPm-Bg-06Z" id="fke-PU-Br6"/>
+                        <outlet property="productName" destination="I4d-1A-ngW" id="dTy-oC-ewd"/>
+                        <outlet property="productPrice" destination="dMx-tJ-cpU" id="jcE-eL-ZoV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BVu-db-EMp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4725" y="793"/>
+            <point key="canvasLocation" x="4724.6376811594209" y="792.85714285714278"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="xhU-GR-Sz0">
